test/Fail/Issue3323r.err
Issue3323r.agda:10.11-12: error: [UnexpectedModalityAnnotationInParameter]
Unexpected modality/relevance annotation in .b
when checking the definition of R
